# nng-2016

./: .gitattributes  README.md
final/: .editorconfig  CMakeLists.txt  hasznos_informaciok.txt  runner.sh
final/client/: Client.cpp  Client.h  GetTickCount.cpp  GetTickCount.hpp  MyClient.cpp  distcache.h  fleepath.cpp  fleepath.h  parser.cpp  parser.h  stdafx.h
final/test/: list  t-a-h-1-atlos-fail.in  t-a-h-1-atlos-fail.ref  t-a-h-2-jobbra-1-hp-marad.in  t-a-h-2-jobbra-1-hp-marad.ref  t-a-h-3-jobbra-leverik.in  t-a-h-3-jobbra-leverik.ref  t-a-q-1.in  t-a-q-1.ref  t-a-q-2.in  t-a-q-3-egyik-elszaladna-masik-uti-es-leveri.in  t-m-1-negy-fo-iranyba.in  t-m-1-negy-fo-iranyba.ref  t-m-2-falba-es-messze-fail.in  t-m-2-falba-es-messze-fail.ref  t-m-3-1hp-enemy-creeprol-lelep-tuleli.in  t-m-3-1hp-enemy-creeprol-lelep-tuleli.ref  (+4 more)
qualif/: .gitignore
qualif/cat/: CMakeLists.txt  cat.cpp  solution-norandom.cpp  solution.cpp  solution.hpp  solution_85.cpp  test.sh  unitTest.cpp
qualif/creep/: 40_commands.txt  604_commands.in  605_commands.in  605_commands_2.in  607_commands.in  608_commands.in  619_commands.in  623_commands_mc.in  633_commands.in  641_commands_mc.in  CMakeLists.txt  MC.cpp  MC.hpp  Model.cpp  Model.hpp  Util.cpp  Util.hpp  creep.cc  creep.map  creep2.cc  creep2.hh
qualif/creep/gui/: Game.cpp  Game.hpp  main.cpp
qualif/tiling/: CMakeLists.txt  gen_sqrt2.py  oeis.py  solution_100.txt  solution_1000.txt  solution_10000.txt  solution_12.txt  solution_15.txt  solution_18.txt  solution_25.txt  solution_50.txt  solution_6.txt  solution_9.txt  tiling.cpp
(+46 files in other folders)
